# 2.02.00 (36275) Oct 30, 2009
10/30/09 new production version with minor enhancements
# 2.01.06 (33564) Jul 23, 2009
7/23/09 revert #999 changes
7/23/09 #999, problems with acc_m=0.0298, revert to original value
# 2.01.05 (33558) Jul 23, 2009
7/23/09 #999, set acc_m=0.0298 to smooth out bump in "length vs time" curve
7/23/09 move model and developer controls into GlaciersModule base class
7/23/09 #999, add developer control panel for model constants
7/23/09 fix: make each instance of Glacier have its own EvolutionState for debugging
# 2.01.04 (33406) Jul 16, 2009
7/16/09 change requests
7/16/09 #766, add snow patch to birds-eye view
# 2.01.03 (33403) Jul 16, 2009
7/16/09 change requests
7/16/09 #766, use ice color for snow patch surface, light gray for cross-section
7/16/09 #766, fix infinite loop in snow patch geometry generation
7/16/09 #766, put snow patch in its own layer, so that it can be in front of debris
7/16/09 #766, add surface to snow patch, shown in green
> show snow patch between terminus and ELA
7/16/09 #766, first step toward snow patch between terminus and ELA, cross-section only, shown in red.
> make ice thickness tool "snap" to surface only between headwall and terminus, otherwise show "?"
7/16/09 #766, make calipers snap and show value on when ice thickness is zero, otherwise show "?"
7/16/09 #1734, move "Glacier Evolution State" dialog to Developer menu
> fewer decimal places (1) for climate controls and glacial budget meter
7/16/09 #1733, fewer decimal places (1) for climate controls and glacial budget meter
7/16/09 revert fix for #999, it made things worse
# 2.01.02 (33295) Jul 14, 2009
7/14/09 enabled fix for #999
fix for #999, bump in glacier length vs time (doesn't appear to fix it)
# 2.01.01 (33293) Jul 14, 2009
7/14/09 publish version before making #999 fix, for comparison
# 2.01.00 (30610) Apr 20, 2009
4/20/09 Batch deploy as part of IOM milestone with revision 30609
# 2.00.02 (29629) Mar 22, 2009