@@ -7,8 +7,6 @@ import java.awt.Frame;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
 
-import javax.swing.JDialog;
-
 import org.jfree.chart.ChartFactory;
 import org.jfree.chart.ChartPanel;
 import org.jfree.chart.JFreeChart;
@@ -21,6 +19,7 @@ import org.jfree.data.xy.XYDataItem;
 import org.jfree.data.xy.XYSeries;
 import org.jfree.data.xy.XYSeriesCollection;
 
+import edu.colorado.phet.common.phetcommon.application.PaintImmediateDialog;
 import edu.colorado.phet.common.phetcommon.model.clock.ClockAdapter;
 import edu.colorado.phet.common.phetcommon.model.clock.ClockEvent;
 import edu.colorado.phet.common.phetcommon.model.clock.ClockListener;
@@ -35,7 +34,7 @@ import edu.colorado.phet.glaciers.util.UnitsConverter;
  *
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
-public class GlacierLengthVersusTimeChart extends JDialog {
+public class GlacierLengthVersusTimeChart extends PaintImmediateDialog {
     
     private static final Range MIN_LENGTH_RANGE_METRIC = new Range( 0, 3E3 ); // meters
     private static final Range MIN_LENGTH_RANGE_ENGLISH = new Range( 
