@@ -1,3 +1,4 @@
+12/4/09 #89, subclass PaintImmediateDialog instead of JDialog
 # 1.08.00 (30610) Apr 20, 2009
 4/20/09 Batch deploy as part of IOM milestone with revision 30609
 # 1.07.02 (29629) Mar 22, 2009
